httpdservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpdservice
spec:
  selector:
    app: httpd
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
