ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpdingress
  namespace: harness-delegate-ng
spec:
  rules:
    - host: ec2-44-201-27-92.compute-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpdservice
                port:
                  number: 8080
